2010-07-28  Andreia Gaita  <avidigal@novell.com>

	* HostServices.cs, ManagedObject.cs: Add CreateObject overload
	  which creates an object and populates it with data from another
	  object (not necessarily of the same type), using the json serializer.	

2010-07-28  Andreia Gaita  <avidigal@novell.com>

	* HostServices.cs: Implement JsonSerialize and RequiresManagedSerializer
	  scriptable methods and a JsonDeserialize helper, using json.js and
	  DataContractJsonSerializer
	* json.js: Added, serializes objects to json, and calls into managed to
	  use a managed serializer if any types require them (ManagedObject,
	  HtmlObject)
	* ManagedObject.cs: Implement ConvertTo using the json serializer
	* ScriptObject.cs: Finish ConvertTo using the json serializer	

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: use the actual object instead of the wrapper
	  when invoking methods from script

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: Map any IDictionary property access to the
	  custom item indexer (on DictOps)

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: a dictionary["AKey"] access from javascript
	  is equivalent to doing IDictionary.AKey, which obviously fails,
	  so always return true in property lookups on an IDictionary.

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ManagedObject.cs: Add IDictionary scripting support via a string
	  indexer

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ManagedObject.cs: Generate a proper script alias from the type name
	  (add <> and arguments for generics, use a simple name for the
	  primitives)

2010-07-20  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: Change the property registration to optionally use
	custom properties on helper objects (like the methods)
	* ManagedObject.cs: Add an indexer to ListOps to support arrays
	(no Item property on []s)

2010-07-20  Andreia Gaita  <avidigal@novell.com>
