@@ -1,5 +1,10 @@
 2010-07-28  Andreia Gaita  <avidigal@novell.com>
 
+	* ManagedObject.cs, ScriptObject.cs: Validate parameters
+	  when invoking indexed properties from js
+
+2010-07-28  Andreia Gaita  <avidigal@novell.com>
+
 	* HostServices.cs, ManagedObject.cs: Add CreateObject overload
 	  which creates an object and populates it with data from another
 	  object (not necessarily of the same type), using the json serializer.	
